@@ -313,7 +313,7 @@ public class CollectionsService {
         HttpMethod httpMethod = HttpMethod.resolve(method);
         if (!availableHTTPMethods.contains(httpMethod)) {
             log.info("Parse postman request \"{}\" failed: Unsupported method is used: {}", requestName, method);
-            return Arrays.asList(new ImportCollectionsResponse(
+            return List.of(new ImportCollectionsResponse(
                     requestName, null, collectionName, "Unsupported method is used: " + method,
                     ImportCollectionStatus.ERROR, null, null));
         }
@@ -445,7 +445,7 @@ public class CollectionsService {
             if (result.getLeft() != null) {
                 results.add(result.getLeft());
                 if (result.getRight() == null) {
-                    return Arrays.asList(result.getLeft());
+                    return singletonList(result.getLeft());
                 }
             }
             parseRequestBodyType(requestBody, result.getRight(), body);
@@ -731,7 +731,7 @@ public class CollectionsService {
 
         if (request.isPropagateCookies() && !isEmpty(listExecutedId)) {
             log.info("Propagating cookies in collection execution enabled. ErId: {}", listExecutedId);
-            copyCookiesForCollectionExecution(projectId, listExecutedId.get(0));
+            copyCookiesForCollectionExecution(projectId, listExecutedId.getFirst());
         }
 
         metricService.registerCountRunCollections(projectId);
@@ -832,7 +832,7 @@ public class CollectionsService {
     void processContentTypeHeader(List<RequestHeader> requestHeaders, RequestBody requestBody) {
         List<RequestHeader> contentTypeHeaders = requestHeaders.stream()
                 .filter(header -> HttpHeaders.CONTENT_TYPE.equals(header.getKey()))
-                .collect(Collectors.toList());
+                .toList();
 
         if (isEmpty(contentTypeHeaders)) {
             RequestBodyType bodyType = requestBody.getType();
@@ -840,7 +840,7 @@ public class CollectionsService {
                 String bodyContentTypeValue = null;
                 if (nonNull(bodyType.getContentTypes())) {
                     // get first content type from list of content types if not null
-                    bodyContentTypeValue = bodyType.getContentTypes().get(0);
+                    bodyContentTypeValue = bodyType.getContentTypes().getFirst();
                 }
                 RequestHeader contentTypeHeader =
                         new RequestHeader(HttpHeaders.CONTENT_TYPE, bodyContentTypeValue, "", false, true);
